# MyExampleCode

./: .gitignore  README.md  Test Results - sharedPreferenceHe___().html  build.gradle  log.txt  settings.gradle
TestCompilerlib/: build.gradle
app/: build.gradle
audiorecoder/: build.gradle
buildsrc/: build.gradle
intentserviceexample/: build.gradle
key/: Certificate  platform.keystore
myanimation/: build.gradle
mybinder/: build.gradle
mybreakpad/: build.gradle
mybreakpointdownload/: build.gradle
mycamera/: build.gradle
myclassloader/: build.gradle
mycropbitmap/: build.gradle
mydictionary/: build.gradle
myglide/: build.gradle
mygradletask/: build.gradle  my_build.gradle
myhook/: build.gradle
myinstrument/: build.gradle
myjavassist/: build.gradle
myjni/: build.gradle
mylifecircle/: build.gradle
mylock/: build.gradle
myndk/: CMakeLists.txt  build.gradle
myndk/src/androidTest/java/com/example/myndk/: ExampleInstrumentedTest.java
myndk/src/main/: AndroidManifest.xml
myndk/src/main/cpp/: CFood.cpp  CFood.h  hello-lib.c
myndk/src/main/java/com/example/myndk/: Food.java  JNIUtils.java  MainActivity.java
myndk/src/main/res/layout/: activity_main.xml
myndk/src/test/java/com/example/myndk/: ExampleUnitTest.java
myndk_invoke/: build.gradle
myopenalipay/: build.gradle
myreplugin/: build.gradle
myroom/: build.gradle
myrxjava2/: build.gradle
mythreadpool/: build.gradle
mytraceview/: build.gradle
myviewmodel/: build.gradle
mywebview/: build.gradle
mywindowmanager/: build.gradle
test_gradle_plugin/: build.gradle
(+436 files in other folders)
